<resources>
    <string name="app_name">M-learning</string>
    <string name="content_description">image</string>
    <string name="Profile">My profile</string>
    <string name="edit_profile1">Edit profile</string>
    <string name="reviews">Eng. Dr. Rebhi Baraka</string>
    <string name="country">Location :</string>
    <string name="add_course">Add Course</string>
    <string name="add_lecture">Add Lecture</string>
    <string name="edit_lectureT">Edit Lecture</string>
    <string name="edit_course">Edit Course</string>
    <string name="category">Category :</string>
    <string name="categories">Categories</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="first_name">First Name</string>
    <string name="name"> Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="birth_date">Birth date</string>
    <string name="select_date">Select Date</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="mobileNo">Mobile no</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="student">Student</string>
    <string name="students">Students</string>
    <string name="lecturer">Lecturer</string>
    <string name="lectures">Lectures</string>
    <string name="document">Document</string>
    <string name="lecture_title">Lecture title</string>
    <string name="assignments">Assignments</string>
    <string name="my_assignment">My assignment</string>
    <string name="add_assignments">Add Assignments</string>

    <string name="remember_me">Remember me</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sing_up">Sing Up</string>
    <string name="add_decuoment">Add Decuoment</string>
    <string name="don_t_have_account">Do not have account?</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_account">Already have account ?</string>
    <string name="reset">reset</string>
    <string name="enter_your_email_to_sent_password_on_it">Enter your email to sent password on it</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="search">search…</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit profile</string>
    <string name="add">Add</string>
    <string name="attach_logo">Attach the course logo</string>
    <string name="attach_video">Attach video</string>
    <string name="attach_file">Attach file</string>
    <string name="chat">Chat</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="course_name">Cource Name</string>
    <string name="lecture_name">Lecture Name</string>
    <string name="course">Courses</string>
    <string name="description">Description</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="no_data_found">No result</string>
    <string name="no_course">You do not have course yes, please create your course</string>
    <string name="no_messages">No messages</string>
    <string name="course_not_available">Course not available now</string>
    <string name="writing_now">is typing</string>
    <string name="write_your_message">Write your message here…</string>
    <string name="notExist">Not exists</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="noInternetConnection">Please check your internet connection</string>
    <string name="select_image_dialog_choose_image">Choose image</string>
    <string name="unreadMsg">Unread Msg</string>
    <string name="image_msg">An image has been sent</string>
    <string name="message_title">Conversation</string>


    <!-- image compress -->
    <string name="failLoadImg">Error in load pic</string>
    <string name="noImagePick">No image selected</string>
    <string name="selectVideo">You must select video</string>
    <string name="video_too_large">Video is too large, must be smaller than 60 second</string>
    <string name="fail_load_video">Fail upload another video</string>


    <!--select image dialog-->
    <string name="hint_must_select">You must select an image</string>
    <string name="hint_must_video">You must select video</string>
    <string name="hint_must_file">You must select file</string>
    <string name="failPickImg">Selected image is too large, choose another one ..</string>

    <!--// select dialog-->
    <string name="select_image_dialog_user_camera">Camera</string>
    <string name="select_image_dialog_from_album">Gallery</string>
    <string name="select_video_dialog_from_album">Video</string>
    <string name="provider">com.m_learning.fileProvider</string>
    <string name="permission_not_granted_error"> You must give this application this permission in order to use this function properly </string>
    <string name="coming_soon">Comming soon</string>
    <string name="newNotification">You have new notification</string>
    <string name="is_required">This field is required</string>
    <string name="invalid_email">This email is invalid</string>
    <string name="email_sent">Your password has been sent to you</string>
    <string name="account_not_found">This account was not found</string>
    <string name="error_valid_email">Please enter a valid email</string>
    <string name="error_old_password">Old password is required</string>
    <string name="error_password">Password is required</string>
    <string name="error_week_password">Week password was entered.\n Password must contains at least 6 characters</string>
    <string name="error_conf_password">Confirm Password is required</string>
    <string name="error_match_password">The password and confirmation \n password must match</string>
    <string name="pass_email_invalid">Sorry!! Wrong Email or Password</string>
    <string name="emailInvalid">This account was not found</string>
    <string name="ERR_emailExist">This email already exists</string>
    <string name="error">An error occurs, please try again…</string>
    <string name="success_signup">Your account has been created successfully</string>
    <string name="success_add"> Added successfully</string>
    <string name="please_verify_email">Please verify your email, check your inbox</string>
    <string name="update_success">Your account has been Updated successfully</string>
    <string name="ok">OK</string>
    <string name="welcome">Welcome in M-Learning app</string>
    <string name="adMobId">ca-app-pub-5192522048064028~2884358021</string>
    <!--    <string name="adMobBannerAdId">ca-app-pub-5192522048064028/6990042429</string>-->
    <string name="adMobBannerAdId">ca-app-pub-3940256099942544/6300978111</string>
    <string name="notification">Notifications</string>
    <string name="ex_user_name">Maya kronz</string>
    <string name="your_courses">Your courses</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_courses">My Courses</string>
    <string name="overview">Overview</string>
    <string name="discover">Discover</string>
    <string name="search_text">Search...</string>
    <string name="register_for_the_course">Register for the course</string>
    <string name="view_course">View Lectures</string>
    <string name="number" formatted="false">%s</string>
    <string name="create_course">Create Course</string>
    <string name="registered_students">Registered Students:</string>
    <string name="_5">5</string>
    <string name="views">Views: </string>
    <string name="views_formatted" formatted="false">Views:%s </string>
    <string name="deadline">Deadline:</string>
    <string name="deadline_format" formatted="false">Deadline: %s</string>
    <string name="deadline_date">Deadline date</string>
    <string name="have_assignment">Have assignment</string>
    <string name="course_code">Course Code</string>
    <string name="dateExample">03/05/2022 12:30</string>
    <string name="course_documents">Course documents</string>
    <string name="delete_msg">Are you sure you want to delete this course?</string>
    <string name="delete_lecture_msg">Are you sure you want to delete this lecture?</string>
    <string name="hide_msg">Are you sure you want to hide this course?</string>
    <string name="show_msg">Are you sure you want to make this course visible to students?</string>
    <string name="error_register_course">You have exceeded the limit of registered courses at the same time</string>
    <string name="shouldSeePevious">You must view the previuos lecture before</string>
    <string name="choose_file">Choose file</string>
    <string name="title">Title</string>
    <string name="send">Send</string>
    <string name="add_new_lecture" formatted="false">%s add new lecture "%s"</string>
    <string name="edit_lecture" formatted="false">%s edit "%s" lecture</string>
    <string name="delete_lecture" formatted="false">%s delete "%s" lecture</string>
    <string name="add_new_assignment" formatted="false">%s submit an assignment</string>
    <string name="view_lecture" formatted="false">%s view %s lecture</string>

</resources>
