<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/edit"
        android:title="@string/edit"
        android:iconTint="@color/black"
        android:icon="@drawable/ic_baseline_edit_24"
        tools:ignore="UnusedAttribute" />
   <item
        android:id="@+id/delete"
        android:title="@string/delete"
        android:iconTint="@color/black"
        android:icon="@drawable/ic_baseline_delete_24"
       tools:ignore="UnusedAttribute" />

    <item
        android:id="@+id/hide"
        android:title="@string/hide"
        android:iconTint="@color/black"
        android:icon="@drawable/ic_baseline_visibility_off_24"
        tools:ignore="UnusedAttribute" />
</menu>