<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <ImageButton
                android:layout_width="?actionBarSize"
                android:layout_height="?actionBarSize"
                android:background="@null"
                android:id="@+id/ibtn_back"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="?actionBarSize"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/add_course"
                android:textColor="@color/white"
                android:textSize="@dimen/large_text_size"
                android:textStyle="bold" />


        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_horizontal_margin"
            android:layout_marginEnd="@dimen/small_horizontal_margin"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginTop="@dimen/small_horizontal_margin"
                android:background="@drawable/sign_in"
                android:baselineAligned="false">


                <ImageView
                    android:id="@+id/img_product"
                    android:layout_width="match_parent"
                    android:padding="@dimen/padding"
                    android:scaleType="centerCrop"
                    android:layout_height="match_parent" />


                <LinearLayout
                    android:id="@+id/ll_add_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_add_categorie" />

                    <TextView
                        style="@style/TextViewStyle"
                        android:padding="0dp"
                        android:text="@string/attach_logo" />

                </LinearLayout>
            </FrameLayout>


            <EditText
                android:id="@+id/ed_name"
                style="@style/EditText"
                android:layout_marginTop="@dimen/marginBtnView"
                android:hint="@string/course_name" />

            <EditText
                android:id="@+id/ed_courseCode"
                style="@style/EditText"
                android:layout_marginTop="@dimen/marginBtnView"
                android:hint="@string/course_code" />

            <EditText
                android:id="@+id/ed_details"
                style="@style/EditText"
                android:layout_marginTop="@dimen/marginBtnView"
                android:gravity="top|start"
                android:hint="@string/description"
                android:minLines="3"
                android:singleLine="false" />

            <EditText
                android:id="@+id/ed_deadline"
                style="@style/EditText"
                android:layout_marginTop="@dimen/padding"
                android:drawableStart="@drawable/ic_calendar_today"
                android:hint="@string/deadline_date"
                android:focusable="false"
                android:inputType=""
                tools:ignore="TextFields" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chb_assignment"
                android:checked="true"
                android:text="@string/have_assignment" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/course_documents"
                    style="@style/TextViewStyle" />

                <HorizontalScrollView
                    android:id="@+id/hScrollView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding"
                    android:layout_marginEnd="@dimen/padding"
                    android:layout_marginBottom="@dimen/horizontal_margin"
                    android:scrollbarSize="0dp"
                    android:scrollbars="none">


                </HorizontalScrollView>

            </LinearLayout>

            <Button
                android:id="@+id/btn_add"
                style="@style/ButtonStyle"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/background_button_a"
                android:text="@string/add" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>